--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,7 +1,7 @@
 footer {
 	height: 60px;
 	width: 100%;
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	background-color: white;
 	text-align: center;
