--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -10,5 +10,6 @@ div.container {
 	max-width: 1000px;
 	margin-top: 30px;
 	margin-bottom: 30px;
-	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
 }
