--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -64,15 +64,24 @@ div.locations h2 {
 	font-size: 18px;
 }
 
-li {
-	list-style: none;
-	margin: 0 auto;
-	border-left: 2px solid #3ca0e7;
-	display: inline-block;
-	padding: 0 30px;
-	position: relative;
-	text-decoration: none;
-	text-align: center;
-	font-family: arvo;
-	}
+div ul {
+	visibility: hidden;
+	opacity: 0;
+	position: absolute;
+	padding-left: 0;
+	left: 0;
+	display: none;
+	background: white;
+}
+
+div:hover > ul,
+div ul:hover {
+	visibility: visible;
+	opacity: 1;
+	display: block;
+	min-width: 250px;
+	text-align: left;
+	padding-top: 20px;
+	box-shadow: 0px 3px 5px -1px #ccc;
+}
 
