--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -37,6 +37,14 @@ div.amenities {
 	width: 25%;
 }
 
+div.locations h2 {
+	font-size: 16px;
+	font-weight: 600;
+	margin-left: -15px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
 div.locations h3,
 div.amenities h3 {
 	font-weight: 600;
@@ -52,26 +60,17 @@ div.amenities h4 {
 	margin-top: 0px;
 }
 
-div.amenities.ul.popover {
-
-	color: #FAFAFA;
+div ul.popover {
+	visibility: hidden;
+	opacity: 0;
+	position: relative;
+	padding-left: 0;
+	left: 0;
+	background: #FAFAFA;
 	border: 1px solid #DDDDDD;
 	border-radius: 4px;
 	width: 100%;
-}
-
-div.locations h2 {
-	font-size: 18px;
-}
-
-div ul {
-	visibility: hidden;
-	opacity: 0;
-	position: absolute;
-	padding-left: 0;
-	left: 0;
-	display: none;
-	background: white;
+	list-style-type: none;
 }
 
 div:hover > ul,
@@ -79,9 +78,15 @@ div ul:hover {
 	visibility: visible;
 	opacity: 1;
 	display: block;
-	min-width: 250px;
 	text-align: left;
 	padding-top: 20px;
-	box-shadow: 0px 3px 5px -1px #ccc;
+	padding-bottom: 20px;
 }
 
+li {
+	font-weight: 400;
+	font-size: 14px;
+	margin-left: 50px;
+	margin-top: 0px;
+	margin-bottom: 9px;
+}
