--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,27 +1,3 @@
-div.price_by_night {
-	color: #FF5A5F;
-	border: 4px solid #FF5A5F;
-	border-radius: 4px;
-	min-width: 60px;
-	height: 60px;
-	font-size: 30px;
-	vertical-align: top;
-	text-align: right;
-}
-
-div.information {
-	height: 80px;
-	border-top-style: 1px solid #DDDDDD;
-	border-bottom-style: 1px solid #DDDDDD;
-}
-
-div.max_guest{
-	width: 100px
-
-
-}
-
-
 section.places {
 	text-align: center;
 	margin: 20px;
@@ -48,3 +24,45 @@ article h2 {
 	font-size: 30px;
 	text-align: center;
 }
+
+.price_by_night {
+	color: #FF5A5F;
+	border: 4px solid #FF5A5F;
+	border-radius: 50%;
+	min-width: 60px;
+	height: 60px;
+	font-size: 30px;
+	float: right;
+	margin-bottom: 0px;
+}
+
+div.information {
+	height: 80px;
+	border-top: 1px solid #DDDDDD;
+	border-bottom: 1px solid #DDDDDD;
+	text-align: center;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+
+div.max_guest {
+	width: 100px;
+}
+
+div.number_rooms {
+	width: 100px;
+}
+
+div.number_bathrooms {
+	width: 100px;
+}
+
+div.user {
+	width: 100px;
+}
+
+div.description {
+	width: 100px;
+}
+
