--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -9,8 +9,8 @@ article {
 	padding: 20px;
 	border: 1px solid #FF5A5F;
 	border-radius: 4px;
-	text-align: center;
 	display: inline-block;
+	vertical-align: top;
 }
 
 .places h1 {
@@ -28,12 +28,14 @@ article h2 {
 .price_by_night {
 	color: #FF5A5F;
 	border: 4px solid #FF5A5F;
-	border-radius: 50%;
+	border-radius: 100%;
 	min-width: 60px;
 	height: 60px;
+	line-height: 60px;
 	font-size: 30px;
 	float: right;
-	margin-bottom: 0px;
+	position: relative;
+	margin-top: -80px;
 }
 
 div.information {
@@ -53,28 +55,17 @@ div.information {
 	background-position: top 10px left 70px, top 10px center, top 10px left 275px;
 }
 
-div.max_guest {
-	width: 100px;
-	margin-top: 45px;
-}
-
-div.number_rooms {
-	width: 100px;
-	margin-top: 45px;
-}
-
+div.max_guest,
+div.number_rooms,
 div.number_bathrooms {
 	width: 100px;
 	margin-top: 45px;
 }
 
-div.user {
-	width: 100%;
-	text-align: left;
-
-}
-
+div.user,
 div.description {
 	width: 100%;
 	text-align: left;
+	margin-bottom: 10px;
+	margin-top: 10px;
 }
