--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -25,7 +25,7 @@ article h2 {
 	text-align: center;
 }
 
-.price_by_night {
+div.price_by_night {
 	color: #FF5A5F;
 	border: 4px solid #FF5A5F;
 	border-radius: 100%;
